--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -1,7 +1,8 @@
 body, html
+  margin: 0
   line-height 1
   font-weight 200
-  font-family "PingFang SC","STHeitiSC-Light",'Helvetica-Light',arial,sans-serif
+  font-family "PingFang SC", "STHeitiSC-Light", 'Helvetica-Light', arial, sans-serif
 
 .clearfix
   display inline-block
@@ -16,11 +17,11 @@ body, html
 @media (-webkit-min-device-pixel-ratio: 1.5),(min-device-pixel-ratio: 1.5)
   .border-1px
     &::after
-      -webkit-transform : scaleY(0.7)
-      transform : scaleY(0.7)
+      -webkit-transform: scaleY(0.7)
+      transform: scaleY(0.7)
 
 @media (-webkit-min-device-pixel-ratio: 2),(min-device-pixel-ratio: 2)
   .border-1px
     &::after
-      -webkit-transform : scaleY(0.5)
-      transform : scaleY(0.5)
+      -webkit-transform: scaleY(0.5)
+      transform: scaleY(0.5)
